<resources>
    <string name="app_name">Universe Corp</string>
    <string name="app_name_2">Universe Corp</string>
    <string name="version">Version 2.0</string>
    <string name="assignment">Aplikasi Komputasi Bergerak</string>
    <string name="title_profile">Profile</string>
    <string name="title_contact">Contact</string>
    <string name="title_friends">Friends</string>
    <string name="title_about">About</string>
    <string name="title_friend_detail">Friend Detail</string>
    <string name="_title_add_friend">Add Friend</string>
    <string name="application">Application</string>
    <string name="creator">Creator</string>
    <string name="my_name">Vanadia Aviandi</string>
    <string name="my_nim">10116287</string>
    <string name="my_class">IF - 7</string>
    <string name="major">Informatics Engineering</string>
    <string name="university">Indonesian Computer University</string>
    <string name="my_desc">I am Vanadia Aviandi. I currently enrolled as bachelor of informatics engineering student at Indonesian Computer University.</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="my_number">no HP maneh</string>
    <string name="my_email">email maneh</string>
    <string name="my_ig">\IG maneh</string>
    <string name="name">Name</string>
    <string name="nim">NIM</string>
    <string name="class_">Class</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="tag_line">Selamat Datang</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_friend">Edit Friend</string>
    <string name="login_failed_msg">Login failed, Username or password is wrong !</string>
    <string name="sign_up_failed_msg">Sign up failed, Username already used !</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_you_logged_in_as">Welcome, You logged in as :</string>
</resources>
