<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragment.FriendsFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarFriend"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:popupTheme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
            android:textColor="@android:color/white"
            android:textSize="@dimen/toolbarText" />

    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ava1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_you_logged_in_as" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:text="Fikri Ahmad Ramdhan" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/item_button"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>